v1.5.4

new:
- Todo's states expanded and up to grow more
- Added 'Cancel' and 'Progress' states for '!' and '=' prefixes respectively
- Added SetState command; It duplicates changing states by entering symbol, and mostly added for those who dont want to remember prefixes
- added <alt+d> binding to SetState command

issues:
- External DB states will now be 'Open' and 'Close' with newly created id's, and state name migration is done at first access to every one project by saving all tasks with +1 version and refering to new id_state. Old names (True and False) are stayed with their id's, so if you're using SQL db, you may want to check id_state reassignment for all tasks within project.


v1.5.3

new:
- middle-line todo; '#todo:' can be inserted anywhere, making remaining part of string a saved comment

fix:
- aggressive HTTP flushing removed; it is only done at start and at exit of last ST window
- detected limit for count of tasks synchronised (about 200); fixed
- better comparison for most up-to-date corresponding multidb todo at db.fetch()
- removed back 60sec gap while comparing multidb todo's, due to saving stamps from same time value


v1.5.2

crash fix:
- HTTP newId() was returning wrong value


v1.5.1

fix:
- updated changelog, merely


v1.5.0

new:
- Multiple DB allowed. Task will be saved to all specified DB's at one time.
- 'File' mode DB is always on and dont have any explicit settings.
- Specified DB's are synchronized at ST start and at flush points.

change:
- 'Transfer' command is obsolete and removed, due to ability to set multiple synchronized DB's.

fix:
- HTTP is now fetched/synchronized.

issue:
- At the moment only one external DB (in addition fo 'File') is allowed; It is defined by last config string, as before. Removing this limitation is low-priority, tho all code preparations are done.
- Synchronizing only last version of each task is desired behaviour from now.


v1.4.0

new: