@@ -3,4 +3,5 @@
 	"1.4.0": "messages/1.4.0.txt",
 	"1.5.0": "messages/1.5.0.txt",
 	"1.5.3": "messages/1.5.3.txt",
+	"1.5.4": "messages/1.5.4.txt",
 }
